@@ -22,9 +22,35 @@
 
 /* Rename the file OLD relative to OLDFD to NEW relative to NEWFD.  */
 int
-__renameat (int oldfd, const char *old, int newfd, const char *new)
+__renameat2 (int oldfd, const char *old, int newfd, const char *new,
+             unsigned int flags)
 {
-  return __renameat2 (oldfd, old, newfd, new, 0);
+  error_t err;
+  file_t olddir, newdir;
+  const char *oldname, *newname;
+  int excl = 0;
+
+  if (flags & (RENAME_EXCHANGE | RENAME_WHITEOUT))
+    return __hurd_fail (ENOSYS);
+  if (flags & RENAME_NOREPLACE)
+    excl = 1;
+
+  olddir = __directory_name_split_at (oldfd, old, (char **) &oldname);
+  if (olddir == MACH_PORT_NULL)
+    return -1;
+  newdir = __directory_name_split_at (newfd, new, (char **) &newname);
+  if (newdir == MACH_PORT_NULL)
+    {
+       __mach_port_deallocate (__mach_task_self (), olddir);
+      return -1;
+    }
+
+  err = __dir_rename (olddir, oldname, newdir, newname, excl);
+  __mach_port_deallocate (__mach_task_self (), olddir);
+  __mach_port_deallocate (__mach_task_self (), newdir);
+  if (err)
+    return __hurd_fail (err);
+  return 0;
 }
-libc_hidden_def (__renameat)
-weak_alias (__renameat, renameat)
+libc_hidden_def (__renameat2)
+weak_alias (__renameat2, renameat2)
