@@ -21,7 +21,7 @@
 #include <sysdep.h>
 
 int
-renameat2 (int oldfd, const char *old, int newfd, const char *new,
+__renameat2 (int oldfd, const char *old, int newfd, const char *new,
            unsigned int flags)
 {
 #if !defined (__NR_renameat) || defined (__ASSUME_RENAMEAT2)
@@ -42,3 +42,5 @@ renameat2 (int oldfd, const char *old, int newfd, const char *new,
   return -1;
 #endif
 }
+libc_hidden_def (__renameat2)
+weak_alias (__renameat2, renameat2)
